# base_fastapi

./: .gitignore  pyproject.toml
fastapi-aplication/: main.py
fastapi-aplication/alembic/versions/: 2024_07_02_0955-29b9e8f171d2_crerate_user_tabel.py
fastapi-aplication/api/api_v1/: __init__.py  users.py
fastapi-aplication/core/: config.py
fastapi-aplication/core/models/: base.py  db_helper.py  user.py
fastapi-aplication/utils/: __init__.py
