[tool.poetry]
name = "fastapi-base-app"
version = "0.1.0"
description = ""
authors = ["Poliakov Ivan <poliakov1324iv@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.4"
